# mgv-build-umbrella

./: CMakeLists.txt
cmake/: Qt4.cmake  Qt5.cmake  Utils.cmake
